Restructure Phase 0: Quickstart, cheat sheet, and developer onboarding (#350)
Add quickstart.md with Gradle/Maven setup (including --enable-preview),
cheatsheet.md with path types, operators, escape hatches, and type
conversions. Add decision flowchart to path_types.md, escape hatches
section to effect_path_overview.md, and green/red railway colour coding
across effect and transformer diagrams. Slim down home.md and README.md
to link to quickstart as single source of truth for setup. Include
restructure plan and pedagogical report as planning references.